--- a/assets/style/amber-mobile.css
+++ b/assets/style/amber-mobile.css
@@ -1,10 +1,19 @@
+body {
+	margin: 8px;
+	padding: 0px;
+}
+
+.page-body {
+	max-width: 100%;
+}
+
 .parent {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr;
 	grid-column-gap: 0px;
 	grid-row-gap: 10px; 
-	max-width: 400px;
+	max-width: 100%;
 	margin: auto;
 } 
 
@@ -17,4 +26,6 @@
 
 .icon {
 	margin: auto;
+	display: block;
+	max-height: 100%;
 }
