--- a/assets/style/amber-terminal.css
+++ b/assets/style/amber-terminal.css
@@ -7,6 +7,17 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+  font-family: 'fontello';
+  src: url('./font/fontello.eot?73460684');
+  src: url('./font/fontello.eot?73460684#iefix') format('embedded-opentype'),
+	   url('./font/fontello.woff?73460684') format('woff'),
+	   url('./font/fontello.ttf?73460684') format('truetype'),
+	   url('./font/fontello.svg?73460684#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body{
 	box-sizing: border-box;
 	margin: 0 auto;
@@ -82,4 +93,8 @@ a:hover.splash {align-text: center; margin: auto; 	text-decoration: none;}
 	color: #df7e00;
 	font-size: 2em;
 	font-weight: 600;
+}
+
+.feed {
+	font-family: fontello;
 }
