--- a/assets/style/amber-terminal.css
+++ b/assets/style/amber-terminal.css
@@ -86,6 +86,11 @@ a:hover {
     background-size: cover;
 }
 
+.div3 {
+	grid-area: 1 / 1 / 2 / 2;
+	padding-left:5px;
+}
+
 .div2 { grid-area: 1 / 2 / 2 / 3; } 
 .splash {align-text: center; margin: auto; 	text-decoration: none;}
 a:hover.splash {align-text: center; margin: auto; 	text-decoration: none;}
